Revision history for Stancer.

Unreleased

- Add missing `$Dispute::amount`
- Rewrite main package pod
- Remove default timeout
- Update dependencies
- Remove needs to `List::MoreUtils::one()`


1.0.0   2022-09-26

- Initial release