@@ -10,8 +10,6 @@ use warnings;
 our @EXPORT_OK = ();
 our %EXPORT_TAGS = ('all' => \@EXPORT_OK);
 
-use Business::IBAN;
-use Business::SWIFT;
 use Stancer::Core::Types::Helper qw(error_message);
 use Stancer::Exceptions::InvalidAmount;
 use Stancer::Exceptions::InvalidBic;
@@ -99,7 +97,19 @@ push @defs, {
         my $value = shift;
 
         return if not defined $value;
-        return Business::SWIFT->validateBIC($value);
+
+        my $size = length $value;
+
+        return 0 if $size != 8 && $size != 11;
+        return 1 if $value =~ m{
+            ^                   # Starts with
+            \p{IsAlphabetic}{4} # Bank code
+            \p{IsAlphabetic}{2} # Country code (ISO format)
+            \w{2}               # Localistion code
+            (?:\w{3})?          # Optional branch code
+            $                   # Ends with
+        }smx;
+        return 0;
     },
     message => error_message('%s is not a valid BIC code.'),
     exception => 'Stancer::Exceptions::InvalidBic',
@@ -111,7 +121,37 @@ push @defs, {
         my $value = shift;
 
         return if not defined $value;
-        return Business::IBAN->new()->valid($value);
+
+        my $iban = uc $value;
+
+        $iban =~ s/\s//gsm;
+
+        my ($country, $check, $bban) = $iban =~ m{
+            ^                 # Starts with
+            (\p{IsUpper}{2})  # Country code (ISO format)
+            (\d{2})           # Internal checksum (between 2 and 97)
+            (\w{10,30})       # Basic Bank Account Number
+            $                 # Ends with
+        }smx;
+
+        return if not($country) and not($check) and not($bban);
+
+        my $code = $bban . $country . $check;
+
+        $code =~ s{
+            (\p{IsUpper}) # Replace any uppercase letter
+        }{
+            (ord $1) - 55 # with a numeric equivalent
+        }egsmx;
+
+        my $checksum = substr $code, 0, 2;
+        my @parts = (substr $code, 2) =~ m/.{,7}/gsm;
+
+        for my $part (@parts) {
+            $checksum = ($checksum . $part) % 97;
+        }
+
+        return $checksum == 1;
     },
     message => error_message('%s is not a valid IBAN account.'),
     exception => 'Stancer::Exceptions::InvalidIban',
